# StayReal

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
app/: index.html  (+1 more)
internal-api/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
internal-api/android/: .gitignore  build.gradle.kts
internal-api/android/src/main/java/: ApiPlugin.kt  Authentication.kt  BeRealSignature.kt  BootReceiver.kt  Cache.kt  Moment.kt  NotificationService.kt  Preferences.kt  Requests.kt
internal-api/guest-js/: index.ts
internal-api/ios/: Package.swift
internal-api/ios/Sources/: ApiPlugin.swift  Authentication.swift  BeRealSignature.swift  Cache.swift  Moment.swift  Preferences.swift  Requests.swift
internal-api/permissions/: default.toml
internal-api/permissions/autogenerated/: reference.md
internal-api/permissions/autogenerated/commands/: clear_auth_details.toml  compress_webp_to_size.toml  convert_jpeg_to_webp.toml  fetch_last_moment.toml  refresh_token.toml  start_notification_service.toml
internal-api/permissions/schemas/: schema.json
internal-api/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tauri-plugin-bereal-api/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
tauri-plugin-bereal-api/android/: build.gradle.kts  local.properties
tauri-plugin-bereal-api/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-bereal-api/android/src/main/: AndroidManifest.xml
tauri-plugin-bereal-api/android/src/main/java/: ApiPlugin.kt  Authentication.kt  BeRealSignature.kt  Cache.kt  Example.kt  ExamplePlugin.kt  Moment.kt  NotificationService.kt  NotificationWorker.kt  Preferences.kt  Requests.kt
tauri-plugin-bereal-api/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-bereal-api/guest-js/: index.ts
tauri-plugin-bereal-api/permissions/: default.toml
tauri-plugin-bereal-api/permissions/autogenerated/: reference.md
tauri-plugin-bereal-api/permissions/autogenerated/commands/: get_auth_details.toml  set_auth_details.toml
tauri-plugin-bereal-api/permissions/schemas/: schema.json
tauri-plugin-bereal-api/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+100 files in other folders)
