[package]
name = "stayreal"
version = "0.1.0"
description = "An open-source, lightweight and privacy-focused BeReal alternative client."
authors = ["Mikkel ALMONTE--RINGAUD <contact@vexcited.com>"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stayreal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-internal-api = { path = "../internal-api" }
tauri-plugin-dialog = "2"
